--- a/hyprland.conf
+++ b/hyprland.conf
@@ -24,7 +24,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,1920x1080@180,auto,auto
+monitor=DP-1,1920x1080@180,0x0,1
 
 
 ###################
